# PhantomMenace---IniParser

./: .gitignore  CMakeLists.txt
cmake/modules/: FindCppUnit.cmake
include/: PM_IP_Parser.h
src/: CMakeLists.txt  PM_IP_IniElement.cpp  PM_IP_IniElement.h  PM_IP_Parser.cpp  PM_IP_Parser.h  PM_IP_StaticFunctions.cpp  PM_IP_StaticFunctions.h
test/: CMakeLists.txt  ParserTest.cpp  ParserTest.hpp  doubleElement.cpp  main.cpp  multipleElements.cpp  parseFromFile.cpp  parseFromFile.ini  repeatingAttribute.cpp  simpleElement.cpp  spacesAround.cpp
